--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "market-intelligence-war-room",
   "private": true,
@@ -11,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.21.0",
+    "@supabase/supabase-js": "^2.58.0",
     "framer-motion": "^12.23.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
